--- a/index.html
+++ b/index.html
@@ -7,51 +7,51 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
-      <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
-      <a class="more_inf" 
+    <div class="intro">
+      <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix" class="intro__image">
+      <a class="intro__link" 
           href="https://goal-life.com/page/method/matrix-eisenhower">
           Want more details?
       </a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
+    <div class="todo">
+      <p class="add-item" id="add-item">
         <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
-          <button>Add</button>
+        <div class="add-item__wrapper">
+          <input id="new-task" class="todo__input" type="text">
+          <button class="todo__btn_add">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
-      <ul id="incompleteTasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="Remove">
+      <h3 class="todo__heading">Todo</h3>
+      <ul class="todo__list" id="uncompleted-tasks">
+        <li class="list__item">
+          <input type="checkbox" class="todo__checkbox">
+          <label class="todo__label todo__input">Pay Bills</label>
+          <input type="text" class="todo__input">
+          <button class="todo__btn_edit">Edit</button>
+          <button class="todo__btn_delete">
+            <img src="./remove.svg" class="todo__btn-icon" alt="Remove">
           </button>
         </li>
-        <li class="editMode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="Remove">
+        <li class="list__item_editMode">
+          <input type="checkbox" class="todo__checkbox">
+          <label class="todo__label todo__input">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="todo__input">
+          <button class="todo__btn_edit">Save</button>
+          <button class="todo__btn_delete">
+            <img src="./remove.svg" class="todo__btn-icon" alt="Remove">
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="Remove">
+      <h3 class="todo__heading">Completed</h3>
+      <ul class="todo__list" id="completed-tasks">
+        <li class="list__item">
+          <input type="checkbox" checked class="todo__checkbox">
+          <label class="todo__label todo__input">See the Doctor</label>
+          <input type="text" class="todo__input">
+          <button class="todo__btn_edit">Edit</button>
+          <button class="todo__btn_delete">
+            <img src="./remove.svg" class="todo__btn-icon" alt="Remove">
           </button>
         </li>
       </ul>
