--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
           Want more details?
       </a>
     </div>
-    <div class="todo">
-      <p class="add-item" id="add-item">
+    <section class="todo">
+      <div class="add-item" id="add-item">
         <label for="new-task">Add Item</label>
         <div class="add-item__wrapper">
           <input id="new-task" class="todo__input" type="text">
           <button class="todo__btn_add">Add</button>
         </div>
-      </p>
+      </div>
       <h3 class="todo__heading">Todo</h3>
       <ul class="todo__list" id="uncompleted-tasks">
         <li class="list__item">
@@ -55,7 +55,7 @@
           </button>
         </li>
       </ul>
-    </div>
+    </section>
     <script src="app.js"></script>
   </body>
 </html>
