--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </li>
         <li class="list__item list__item_editMode">
           <input type="checkbox" class="todo__checkbox">
-          <label class="todo__label todo__label_editMode todo__task>">Go Shopping</label>
+          <label class="todo__label todo__label_editMode todo__task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="todo__input todo__task todo__input_editMode">
           <button class="todo__btn_edit">Save</button>
           <button class="todo__btn_delete">
