refactor: edit classes names according to 2.1 html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <label for="new-task" class="add-item__new-task">Add Item</label>
         <div class="add-item__wrapper">
           <input id="new-task" class="todo__input add-item__input todo__task" type="text">
-          <button class="todo__btn_add">Add</button>
+          <button class="todo__btn todo__btn_add">Add</button>
         </div>
       </div>
       <h3 class="todo__heading">Todo</h3>
@@ -31,8 +31,8 @@
           <input type="checkbox" class="todo__checkbox">
           <label class="todo__label todo__task">Pay Bills</label>
           <input type="text" class="todo__input todo__task">
-          <button class="todo__btn_edit">Edit</button>
-          <button class="todo__btn_delete">
+          <button class="todo__btn todo__btn_edit">Edit</button>
+          <button class="todo__btn todo__btn_delete">
             <img src="./remove.svg" class="todo__btn-icon" alt="Remove">
           </button>
         </li>
@@ -40,8 +40,8 @@
           <input type="checkbox" class="todo__checkbox">
           <label class="todo__label todo__label_editMode todo__task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="todo__input todo__task todo__input_editMode">
-          <button class="todo__btn_edit">Save</button>
-          <button class="todo__btn_delete">
+          <button class="todo__btn todo__btn_edit">Save</button>
+          <button class="todo__btn todo__btn_delete">
             <img src="./remove.svg" class="todo__btn-icon" alt="Remove">
           </button>
         </li>
@@ -52,8 +52,8 @@
           <input type="checkbox" checked class="todo__checkbox">
           <label class="todo__label todo__task">See the Doctor</label>
           <input type="text" class="todo__input todo__task">
-          <button class="todo__btn_edit">Edit</button>
-          <button class="todo__btn_delete">
+          <button class="todo__btn todo__btn_edit">Edit</button>
+          <button class="todo__btn todo__btn_delete">
             <img src="./remove.svg" class="todo__btn-icon" alt="Remove">
           </button>
         </li>
