--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
       <h3 class="todo__heading">Todo</h3>
       <ul class="todo__list" id="uncompleted-tasks">
-        <li class="list__item">
+        <li class="todo__item">
           <input type="checkbox" class="todo__checkbox">
           <label class="todo__label todo__task">Pay Bills</label>
           <input type="text" class="todo__input todo__task">
@@ -36,7 +36,7 @@
             <img src="./remove.svg" class="todo__btn-icon" alt="Remove">
           </button>
         </li>
-        <li class="list__item list__item_editMode">
+        <li class="todo__item todo__item_editMode">
           <input type="checkbox" class="todo__checkbox">
           <label class="todo__label todo__label_editMode todo__task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="todo__input todo__task todo__input_editMode">
@@ -48,7 +48,7 @@
       </ul>
       <h3 class="todo__heading">Completed</h3>
       <ul class="todo__list" id="completed-tasks">
-        <li class="list__item">
+        <li class="todo__item">
           <input type="checkbox" checked class="todo__checkbox">
           <label class="todo__label todo__task">See the Doctor</label>
           <input type="text" class="todo__input todo__task">
