--- a/index.html
+++ b/index.html
@@ -1,64 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo App</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" 
-        rel="stylesheet">
-    <link rel="stylesheet" href="style.css" media="screen">
-  </head>
-  <body class="page">
-    <div class="intro">
-      <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix" class="intro__image">
-      <a class="intro__link" 
-          href="https://goal-life.com/page/method/matrix-eisenhower">
-          Want more details?
-      </a>
-    </div>
-    <section class="todo">
-      <div class="add-item" id="add-item">
-        <label for="new-task" class="add-item__new-task">Add Item</label>
-        <div class="add-item__wrapper">
-          <input id="new-task" class="todo__input add-item__input todo__task" type="text">
-          <button class="todo__btn todo__btn_add">Add</button>
-        </div>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Todo App</title>
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" media="screen">
+</head>
+
+<body class="page">
+  <div class="intro">
+    <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix" class="intro__image">
+    <a class="intro__link" href="https://goal-life.com/page/method/matrix-eisenhower">
+      Want more details?
+    </a>
+  </div>
+  <section class="todo">
+    <div class="add-item" id="add-item">
+      <label for="new-task" class="add-item__new-task">Add Item</label>
+      <div class="add-item__wrapper">
+        <input id="new-task" class="todo__input add-item__input todo__task" type="text">
+        <button class="todo__btn todo__btn_add">Add</button>
       </div>
-      <h3 class="todo__heading">Todo</h3>
-      <ul class="todo__list" id="uncompleted-tasks">
-        <li class="todo__item">
-          <input type="checkbox" class="todo__checkbox">
-          <label class="todo__label todo__task">Pay Bills</label>
-          <input type="text" class="todo__input todo__task">
-          <button class="todo__btn todo__btn_edit">Edit</button>
-          <button class="todo__btn todo__btn_delete">
-            <img src="./remove.svg" class="todo__btn-icon" alt="Remove">
-          </button>
-        </li>
-        <li class="todo__item todo__item_editMode">
-          <input type="checkbox" class="todo__checkbox">
-          <label class="todo__label todo__label_editMode todo__task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="todo__input todo__task todo__input_editMode">
-          <button class="todo__btn todo__btn_edit">Save</button>
-          <button class="todo__btn todo__btn_delete">
-            <img src="./remove.svg" class="todo__btn-icon" alt="Remove">
-          </button>
-        </li>
-      </ul>
-      <h3 class="todo__heading">Completed</h3>
-      <ul class="todo__list" id="completed-tasks">
-        <li class="todo__item">
-          <input type="checkbox" checked class="todo__checkbox">
-          <label class="todo__label todo__task">See the Doctor</label>
-          <input type="text" class="todo__input todo__task">
-          <button class="todo__btn todo__btn_edit">Edit</button>
-          <button class="todo__btn todo__btn_delete">
-            <img src="./remove.svg" class="todo__btn-icon" alt="Remove">
-          </button>
-        </li>
-      </ul>
-    </section>
-    <script src="app.js"></script>
-  </body>
+    </div>
+    <h3 class="todo__heading">Todo</h3>
+    <ul class="todo__list" id="uncompleted-tasks">
+      <li class="todo__item">
+        <input type="checkbox" class="todo__checkbox">
+        <label class="todo__label todo__task">Pay Bills</label>
+        <input type="text" class="todo__input todo__task">
+        <button class="todo__btn todo__btn_edit">Edit</button>
+        <button class="todo__btn todo__btn_delete">
+          <img src="./remove.svg" class="todo__btn-icon" alt="Remove">
+        </button>
+      </li>
+      <li class="todo__item todo__item_edit-mode">
+        <input type="checkbox" class="todo__checkbox">
+        <label class="todo__label todo__label_edit-mode todo__task">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="todo__input todo__task todo__input_edit-mode">
+        <button class="todo__btn todo__btn_edit">Save</button>
+        <button class="todo__btn todo__btn_delete">
+          <img src="./remove.svg" class="todo__btn-icon" alt="Remove">
+        </button>
+      </li>
+    </ul>
+    <h3 class="todo__heading">Completed</h3>
+    <ul class="todo__list" id="completed-tasks">
+      <li class="todo__item">
+        <input type="checkbox" checked class="todo__checkbox">
+        <label class="todo__label todo__task">See the Doctor</label>
+        <input type="text" class="todo__input todo__task">
+        <button class="todo__btn todo__btn_edit">Edit</button>
+        <button class="todo__btn todo__btn_delete">
+          <img src="./remove.svg" class="todo__btn-icon" alt="Remove">
+        </button>
+      </li>
+    </ul>
+  </section>
+  <script src="app.js"></script>
+</body>
+
 </html>
